--- a/css/styles.css
+++ b/css/styles.css
@@ -9858,11 +9858,11 @@ a.text-light:hover, a.text-light:focus {
 }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #121416 !important;
+  color: #7c8a99 !important;
 }
 
 .text-body {
-  color: #212529 !important;
+  color: #ffffff !important;
 }
 
 .text-muted {
@@ -10070,7 +10070,7 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #ffffff;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10140,8 +10140,8 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
-  background-image: url("../assets/img/begroun.jpg");
+  color: #ffff;
+  background-image: url("../assets/img/beground.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
