--- a/css/styles.css
+++ b/css/styles.css
@@ -10140,7 +10140,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #ffff;
+  color: #fffff;
   background-image: url("../assets/img/begroun.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10193,8 +10193,8 @@ header.masthead .masthead-heading {
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
   display: flex;
   position: absolute;
-  width: 20%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
   background: rgba(254, 209, 54, 0.9);
   align-items: center;
   justify-content: center;
@@ -10294,20 +10294,20 @@ header.masthead .masthead-heading {
 .timeline > li .timeline-panel {
   position: relative;
   float: right;
-  width: 50%;
-  padding: 0 10px 0 50px;
+  width: 100%;
+  padding: 0 20px 0 100px;
   text-align: left;
 }
 .timeline > li .timeline-panel:before {
   right: auto;
   left: -15px;
-  border-right-width: 8px;
+  border-right-width: 15px;
   border-left-width: 0;
 }
 .timeline > li .timeline-panel:after {
   right: auto;
   left: -14px;
-  border-right-width: 7px;
+  border-right-width: 14px;
   border-left-width: 0;
 }
 .timeline > li .timeline-image {
@@ -10320,7 +10320,7 @@ header.masthead .masthead-heading {
   text-align: center;
   color: white;
   border: 7px solid #e9ecef;
-  border-radius: 50%;
+  border-radius: 100%;
   background-color: #fed136;
 }
 .timeline > li .timeline-image h4 {
@@ -10412,23 +10412,23 @@ header.masthead .masthead-heading {
     padding: 0 20px 20px;
   }
 }
-@media (min-width: 120px) {
+@media (min-width: 1200px) {
   .timeline > li {
-    min-height: 17px;
+    min-height: 170px;
   }
   .timeline > li .timeline-panel {
-    padding: 0 2px 2px 10px;
+    padding: 0 20px 20px 100px;
   }
   .timeline > li .timeline-image {
-    width: 17px;
-    height: 17px;
+    width: 170px;
+    height: 170px;
     margin-left: -85px;
   }
   .timeline > li .timeline-image h4 {
-    margin-top: 4px;
+    margin-top: 40px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 10px 2px 2px;
+    padding: 0 100px 20px 20px;
   }
 }
 .team-member {
