--- a/css/styles.css
+++ b/css/styles.css
@@ -10142,7 +10142,7 @@ header.masthead {
   text-align: center;
   color: #fff;
   background-image: url("../assets/img/aaa.png");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
