--- a/css/styles.css
+++ b/css/styles.css
@@ -10141,7 +10141,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/PROFIL.png");
+  background-image: url("../assets/img/propil.jpg");
   background-repeat: repeat;
   background-attachment: scroll;
   background-position: center center;
